-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8348447 | 24.0.1 | Coleen Phillimore | P3 | Resolved | Fixed | b04 |
| JDK-8346134 | 24 | Coleen Phillimore | P3 | Resolved | Fixed | b29 |
[2024-12-11T14:58:29,802Z] open/src/hotspot/share/oops/compressedKlass.cpp:181: error: undefined reference to 'CompressedKlassPointers::set_klass_decode_mode()'
[2024-12-11T14:58:29,807Z] open/src/hotspot/share/oops/compressedKlass.cpp:278: error: undefined reference to 'CompressedKlassPointers::set_klass_decode_mode()'
[2024-12-11T14:58:30,873Z] open/src/hotspot/share/cds/metaspaceShared.cpp:1492: error: undefined reference to 'CompressedKlassPointers::check_klass_decode_mode(unsigned char*, int, unsigned long)'
[2024-12-11T14:58:31,925Z] collect2: error: ld returned 1 exit status
[2024-12-11T14:58:31,933Z] lib/CompileJvm.gmk:168: recipe for target '/opt/mach5/mesos/work_dir/slaves/b733f181-520a-4536-86fc-7df55263c942-S3197/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/79b38c21-ca8e-4d07-8d16-5bc6dc193ca8/runs/7cd50ed4-d6e4-409d-aebb-c46c7f2c9586/workspace/build/linux-aarch64-zero/support/modules_libs/java.base/zero/libjvm.so' failed
[2024-12-11T14:58:29,807Z] open/src/hotspot/share/oops/compressedKlass.cpp:278: error: undefined reference to 'CompressedKlassPointers::set_klass_decode_mode()'
[2024-12-11T14:58:30,873Z] open/src/hotspot/share/cds/metaspaceShared.cpp:1492: error: undefined reference to 'CompressedKlassPointers::check_klass_decode_mode(unsigned char*, int, unsigned long)'
[2024-12-11T14:58:31,925Z] collect2: error: ld returned 1 exit status
[2024-12-11T14:58:31,933Z] lib/CompileJvm.gmk:168: recipe for target '/opt/mach5/mesos/work_dir/slaves/b733f181-520a-4536-86fc-7df55263c942-S3197/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/79b38c21-ca8e-4d07-8d16-5bc6dc193ca8/runs/7cd50ed4-d6e4-409d-aebb-c46c7f2c9586/workspace/build/linux-aarch64-zero/support/modules_libs/java.base/zero/libjvm.so' failed
- backported by
-
JDK-8346134 Zero interpreter build on Linux Aarch64 is broken
-
- Resolved
-
-
JDK-8348447 Zero interpreter build on Linux Aarch64 is broken
-
- Resolved
-
- relates to
-
JDK-8340212 -Xshare:off -XX:CompressedClassSpaceBaseAddress=0x40001000000 crashes on macos-aarch64
-
- Resolved
-
- links to
-
Commit(jdk24)
openjdk/jdk/897a8abe
-
Commit(master)
openjdk/jdk/ef6e987a
-
Review(jdk24)
openjdk/jdk/22722
-
Review(master)
openjdk/jdk/22692
(2 links to)