8346040: Zero interpreter build on Linux Aarch64 is broken